<resources>

    <string name="app_name">JesseViauAndroidTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="madeBy">Made by Jesse Viau</string>


    //MENU LABELS
    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_viewPager">Step By Step</string>
    <string name="menu_terms">Finance Terms</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_emi">Equated monthly installment</string>

    //Calculators
    <string name="incomeTax_calc">Income Tax Calculator</string>
    <string name="Emi_calc">EMI Calculator</string>
    <string name="calculate">Calculate</string>

    //input field text
    <string name="Salary">Salary</string>
    <string name="incomeTax_input">Your Income</string>

    //CONTACT PAGE
    <string name="contactButton">CONTACT</string>
    <string name="reportABug">REPORT A BUG</string>

    //COMPANY NAME
    <string name="company_title">FinancialEd</string>

    //PERSONAL INFORMATION
    <string name="name">Jesse Viau</string>
    <string name="email">info@FinancialEd.ca</string>
    <string name="phoneButton">PHONE</string>
    <string name="emailButton">EMAIL</string>
    <string name="textButton">TEXT</string>
    <string name="locationButton">LOCATION</string>

    //STEP BY STEP
    <string name="step1">Step 1: Gather Your Tax Documents</string>
    <string name="step2">Step 2: Choose Between the Standard Deduction or Itemizing</string>
    <string name="step3">Step 3: Pick a Filing Status</string>
    <string name="step4">Step 4: File Your Taxes</string>
    <string name="step5">Step 5: Get Organized for Next Year</string>

    //Spinner array
    <string-array name="provinces">
        <item>Ontario</item>
        <item>Quebec</item>
        <item>Nova Scotia</item>
        <item>New Brunswick</item>
        <item>Manitoba</item>
        <item>British Columbia</item>
        <item>P.E.I</item>
        <item>Saskatchewan</item>
        <item>Alberta</item>
        <item>N &amp; L</item>
    </string-array>

    //FAQ QUESTIONS
    <string name="faq0">What’s a Credit Score?</string>
    <string name="faq1">What Is a 401(k)?</string>
    <string name="faq2">What Is an IRA?</string>
    <string name="faq3">What Does Investing Mean?</string>
    <string name="faq4">What Is ‘Good Debt’?</string>
    <string name="faq5">How Much Should I Put in an Emergency Fund?</string>
    <string name="faq6">What Is a Budget? Do I Need One?</string>
    <string name="faq7">How Much Do I Need for Retirement?</string>
    <string name="faq8">How Many Credit Cards Should I Have?</string>
    <string name="faq9">What Is APR? How Do Interest Rates Work?</string>\
    <string name="ListViewDefaultText">Choose an Frequently Asked Question!</string>

    //CREDITS
    <string name="title_applogo">App Logo</string>
    <string name="credit_logo">This image was pulled from <a href="https://pixabay.com/illustrations/f-letter-alphabet-alphabetically-1015534/">Here</a></string>

    <string name="title_calculateButton">Take Home Pay Button</string>
    <string name="credit_calculate">This image was used from <a href="https://laws.com/uploads/cms/20110817/4e4c15fbec35d.jpg">Here</a></string>

    <string name="title_emiButton">Take Home Pay Button</string>
    <string name="emi_calculate">This image was used from <a href="https://www.cashry.com/blog/wp-content/uploads/2019/07/monthly-installment-payday-loans-1.jpg">Here</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>