<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jesseviauandroidtest.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_incomeTaxCalculatorFragment"
            app:destination="@id/incomeTaxCalculatorFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.jesseviauandroidtest.fragments.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_viewpager"
        android:name="com.example.jesseviauandroidtest.fragments.HostFragment"
        android:label="@string/menu_viewPager"
        tools:layout="@layout/fragment_host" />
    <fragment
        android:id="@+id/listViewFragment"
        android:name="com.example.jesseviauandroidtest.fragments.listViewFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_list_view" />
    <fragment
        android:id="@+id/financeTerminologyFragment"
        android:name="com.example.jesseviauandroidtest.fragments.financeTerminologyFragment"
        android:label="@string/menu_terms"
        tools:layout="@layout/fragment_finance_terminology" />
    <fragment
        android:id="@+id/creditsFragment"
        android:name="com.example.jesseviauandroidtest.fragments.creditsFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />
    <fragment
        android:id="@+id/incomeTaxCalculatorFragment"
        android:name="com.example.jesseviauandroidtest.fragments.IncomeTaxCalculatorFragment"
        android:label="fragment_income_tax_calculator"
        tools:layout="@layout/fragment_income_tax_calculator" />
</navigation>