<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/company_icon_faded"
    android:orientation="vertical"
    tools:context=".fragments.creditsFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/AppLogoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:text="@string/title_applogo"
        android:textColor="@android:color/black"
        android:textSize="@dimen/SubTitles" />

    <TextView
        android:id="@+id/appLogoRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AppLogoTitle"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:text="@string/credit_logo"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/calculateButtonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLogoRef"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:text="@string/title_calculateButton"
        android:textColor="@android:color/black"
        android:textSize="@dimen/SubTitles" />

    <TextView
        android:id="@+id/calculateButtonRef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculateButtonTitle"
        android:layout_marginTop="1dp"
        android:text="@string/credit_calculate"
        android:textColor="@android:color/black" />


</RelativeLayout>