<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/company_icon_faded"
    android:orientation="vertical"
    tools:context="com.example.jesseviauandroidtest.fragments.ContactFragment">


    <Button
        android:id="@+id/emiButton"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:layout_below="@+id/incomeTaxButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/emi"
        android:stateListAnimator="@anim/animate_back_in"
        android:text="@string/Emi_calc"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/incomeTaxButton"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/calculator"
        android:stateListAnimator="@anim/animate_back_in"
        android:text="@string/incomeTax_calc"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView

        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#038EEC"
        android:text="@string/madeBy"
        android:textAlignment="center" />


</RelativeLayout>